--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,17 +19,14 @@ jobs:
 
       - name: Prepare site contents
         run: |
-          mkdir public
+          mkdir -p public
           rsync -av --exclude='.git' --exclude='.github' --exclude='README_DEPLOY.md' --exclude='README.md' --exclude='deploy.sh' --exclude='node_modules' ./ public/
 
-      - name: Upload artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v1
+      - name: Deploy to `gh-pages` branch (avoid deprecated Pages artifact action)
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: public
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: public
+          publish_branch: gh-pages
+          keep_files: false
 
-  deploy-pages:
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
